src/main/java/com/example/DiplomaSite/error/StudentCreationException.java
package com.example.DiplomaSite.error;

public class StudentCreationException extends RuntimeException {
    public StudentCreationException(String message, Throwable cause) {
        super(message, cause);
    }
}